--- a/index.html
+++ b/index.html
@@ -1,52 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-        <title>Md. Raja's Website</title>
-            <link rel="stylesheet" href="style.css">
-            </head>
-            <body>
+  <title>Tegi Tyre Shop</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
-                <header>
-                        <h1>Tegi Tyre Shop</h1>
-                                <p>Serving Quality Since 2021</p>
-                                    </header>
+  <header>
+    <h1>Tegi Tyre Shop</h1>
+    <p>Serving Quality Since 2021</p>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#services">Services</a>
+      <a href="#contact">Contact</a>
+      <a href="#address">Address</a>
+    </nav>
+  </header>
 
-                                        <nav>
-                                                <a href="#about">About</a>
-                                                        <a href="#services">Services</a>
-                                                                <a href="#contact">Contact</a>
-                                                                        <a href="#address">Address</a>
-                                                                            </nav>
+  <section id="about">
+    <h2>About Us</h2>
+    <p>I'm Md. Raja, a businessman providing quality tyre services since 2021. Trusted by hundreds in Panna & nearby regions.</p>
+  </section>
 
-                                                                                <section id="about">
-                                                                                        <h2>About Us</h2>
-                                                                                                <p>I'm Md. Raja, a businessman providing quality tyre services since 2021. Trusted by hundreds in Panna & nearby regions.</p>
-                                                                                                    </section>
+  <section id="services">
+    <h2>Our Services</h2>
+    <ul>
+      <li>Remould Tyre</li>
+      <li>Puncture Tyre Repairing</li>
+    </ul>
+  </section>
 
-                                                                                                        <section id="services">
-                                                                                                                <h2>Our Services</h2>
-                                                                                                                        <ul>
-                                                                                                                                    <li>Remould Tyre</li>
-                                                                                                                                                <li>Puncture Tyre Repairing</li>
-                                                                                                                                                        </ul>
-                                                                                                                                                            </section>
+  <section id="payment">
+    <h2>Make Payment</h2>
+    <a href="upi://pay?pa=mdraja827110@upi&pn=MdRaja&cu=INR" class="pay-btn">Pay via UPI</a>
+  </section>
 
-                                                                                                                                                                <section id="contact">
-                                                                                                                                                                        <h2>Contact Us</h2>
-                                                                                                                                                                                <p>Email: <a href="mailto:mdraja827110@gmail.com">mdraja827110@gmail.com</a></p>
-                                                                                                                                                                                        <p>Phone: <a href="tel:+918103670978">+91-8103670978</a></p>
-                                                                                                                                                                                            </section>
+  <section id="contact">
+    <h2>Contact Us</h2>
+    <p>Email: <a href="mailto:mdraja827110@gmail.com">mdraja827110@gmail.com</a></p>
+    <p>Phone: <a href="tel:+918103670978">+91-8103670978</a></p>
+  </section>
 
-                                                                                                                                                                                                <section id="address">
-                                                                                                                                                                                                        <h2>Address</h2>
-                                                                                                                                                                                                                <p>JK SuperCement Plant, Amanganj, Panna, Madhya Pradesh</p>
-                                                                                                                                                                                                                    </section>
+  <section id="address">
+    <h2>Address</h2>
+    <p>JK SuperCement Plant, Amanganj, Panna, Madhya Pradesh</p>
+  </section>
 
-                                                                                                                                                                                                                        <footer>
-                                                                                                                                                                                                                                <p>© 2025 Md. Raja. All rights reserved.</p>
-                                                                                                                                                                                                                                    </footer>
+  <section id="booking">
+    <h2>Book Service</h2>
+    <form action="https://formspree.io/f/mwkadqee" method="POST">
+      <input type="text" name="name" placeholder="Your Name" required><br>
+      <input type="text" name="service" placeholder="Service Type" required><br>
+      <input type="tel" name="phone" placeholder="Phone Number" required><br>
+      <button type="submit">Book Now</button>
+    </form>
+  </section>
 
-                                                                                                                                                                                                                                    </body>
-                                                                                                                                                                                                                                    </html>
+  <footer>
+    <p>&copy; 2025 Tegi Tyre Shop</p>
+  </footer>
+
+</body>
+</html>
                                                                                                                                                                                                                                     
